# DCNBot

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
dcnbot/: __init__.py  cli.py  config.py  example_config.ini  gateway.py
dcnbot/cli/: cli.py  test_cli.py
dcnbot/client/mqtt/: mqtt_client.py  test_mqtt_client.py
dcnbot/client/telegram/: telegram_bot.py  test_telegram_bot.py
dcnbot/config/: config.py  test_config.py
dcnbot/database/: database.py  test_database.py
dcnbot/gateway/: gateway.py  telegram_bot.py  test_telegram_bot.py
docs/: PROJECT_NOTES.md
